<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:orientation="vertical"
          android:layout_height="fill_parent"
          android:gravity="center_horizontal"
          android:background="@android:color/background_dark">


    <TextView android:id="@+id/city_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/city_name"
              android:textSize="60sp"
              android:gravity="center_horizontal"
              android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:id="@+id/sub_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/strict"
            android:layout_below="@id/city_name"
            android:layout_centerInParent="true"
            >

    <TextView android:id="@+id/year_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginLeft="20dp"
              android:layout_marginBottom="10dp"
              android:text="@string/year_established"/>

    <TextView android:id="@+id/state_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="10dp"
              android:gravity="end"
              android:textSize="20sp"
              android:text="@string/site"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/story_layout"
            android:background="@drawable/storyframe"
            android:layout_below="@id/sub_title_layout"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView android:id="@+id/story_text"
                  android:layout_width="0dp"
                  android:layout_weight="3"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  android:lines="1"
                  android:gravity="left"
                  android:layout_gravity="center_vertical"
                  android:textSize="60sp"
                  android:text="@string/story"/>

        <TextView android:id="@+id/story_long"
                  android:layout_width="0dp"
                  android:layout_weight="5"
                  android:layout_height="fill_parent"
                  android:layout_margin="10dp"
                  android:gravity="left"
                  android:textSize="16sp"
                  android:text="@string/story"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_above="@+id/line"
            android:layout_below="@+id/story_layout">

    <LinearLayout
            android:id="@+id/links_layout"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:layout_above="@+id/line">


        <RelativeLayout
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                >

            <ImageView
                    android:id="@+id/map"
                    android:src="@drawable/info_map"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
            <View
                    android:id="@+id/verticalline"
                    android:layout_width="1.5dp"
                    android:background="@android:color/holo_red_dark"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="25dp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/utc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="65dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="26sp"
                    />

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/post_layout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/post_icon"
                    android:src="@drawable/postal"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/post_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:textSize="26dp"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/rain_layout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/rain_icon"
                    android:src="@drawable/rain"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/rain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:textSize="26dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <LinearLayout

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/max_tmp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="22dp"
                        android:text=" "/>

                <TextView
                        android:id="@+id/min_tmp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="22dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=" "/>

            </LinearLayout>

            <ImageView android:id="@+id/tmp_info"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/temperature"
                       android:layout_gravity="center"
                    />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/people_and_area_layout"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_below="@+id/story_layout"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/links_layout"
            android:layout_above="@+id/line">

            <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:rowCount="5"
                    android:columnCount="5">

                <ImageView
                        android:id="@+id/water_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/areaicon2"
                        />
                <TextView
                        android:id="@+id/water_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        />
                <Space/>
                <TextView
                        android:id="@+id/urban_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        />
                <ImageView
                        android:id="@+id/urban_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/areaicon1"
                        />
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <TextView
                        android:id="@+id/area_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:textSize="30dp"
                        android:gravity="center"
                        android:text="@string/area"/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <Space/>
                <ImageView
                        android:id="@+id/urban_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/areaicon3"
                        />
                <Space/>
                <Space/>
                <Space/>
                <ImageView
                        android:id="@+id/urban_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/areaicon4"
                        />
            </GridLayout>


            <LinearLayout
                    android:id="@+id/people_layout"
                    android:layout_gravity="right"
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <LinearLayout
                            android:id="@+id/littles"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="horizontal">
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/littles2"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="horizontal">
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/littles3"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="horizontal">
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/littles4"
                            android:layout_marginBottom="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="horizontal">
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                        android:id="@+id/pop_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:src="@drawable/man2"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <TextView
                android:id="@+id/site_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_alignParentBottom="true"
                android:textSize="30dp"
                android:text="@string/site"
                android:gravity="bottom|center_horizontal"/>

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:background="@android:color/background_light"
            android:layout_above="@id/site_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="2dp"/>

</RelativeLayout>

